<resources>
    <string name="app_name">tripLogger</string>
    <string name="please_enter_credentials">Please enter both email and password</string>
    <string name="enter_credentials">Please enter both email and password</string>
    <string name="location_error">Error in selecting location</string>
    <string name="auth_failed">Authentication failed: %1$s</string>
    <string name= "select_language">Select Language</string>
    <string name="map_view" >Map View</string>
    <string name="list_view">List View</string>
    <string name="vacation_title">Vacation Title</string>
    <string name="vacation_description">Vacation Description</string>
    <string name="vacation_date">Vacation Date</string>
    <string name="vacation_location">Vacation Location</string>
    <string name="vacation_notes">Vacation Notes</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_register">Login/Register</string>
    <string name="logout">Logout</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_view">Select a View!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="update_vacation">Update Vacation</string>
    <string name="you_are_here">You Are Here</string>
    <string name="notes_colon">Notes:</string>
    <string name="notes_go_here">Notes Go Here</string>
    <string name="pictures">Pictures</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="more_details">More Details</string>
    <string name="photo_added">Photo Added</string>
    <string name="no_photo_selected">No Photo Selected</string>
    <string name="permission_denial">Permission denied. Please enable storage permission in Settings</string>
    <string name="photo_deleted">Photo Deleted</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>