<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/vacation_title" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/vacation_description" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/vacation_date" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:focusable="false"
        android:hint="@string/vacation_location" />

    <EditText
        android:id="@+id/editTextNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vacation_notes" />

    <Button
        android:id="@+id/buttonAddVacation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_vacation" />
</LinearLayout>