<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/location" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes" />

    <Button
        android:id="@+id/buttonUpdateVacation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_vacation" />

</LinearLayout>
